/team chat messages can now be logged to the console

Bug Fixes: 
Fixed team chat priority issue (https://github.com/booksaw/BetterTeams/issues/5)

3.0.9
Features: 
/team commands can now have a cooldown or price associated with them, this is configured within team.yml

Added /teama chatspy to spy on messages sent to team chats
Added /team title <player/me> <title> to set the title of that team 
Added /team top to view the leaderboard of teams based on their score
Added /team rank to view a teams rank 
Added /team delhome to delete your teams home
Added /teama title <player> <title> to force a player to have a set title
Added /teama version to view the plugin version
Added /teama home <team> to teleport to a teams home

Improvements:
Added a placeholder for team rank (%betterteams_rank%)
Players rank in team is now displayed in team chat (via '*' for admins and '**' for owners). This can be changed or disabled in messages.yml
Separated the permission nodes for /team unban, /team sethome and /team demote from other commands. 

Bug Fixes: 
Fixed a bug where if HolographicDisplays is present but not enabled on the server, errors appear in the console. 


TODO (any TODO which is not specifically code), mainly used for reminders to update documentation
add new commands help messages to messages.yml
Add permissions for all new commands to plugin.yml
add /teama chatspy to spigot plugin page
add /team title to wiki and spigot plugin page (betterteams.title.others) 
add betterteams.title.self, betterteams.title.color.color, betterteams.title.color.format
add /team top betterteams.top 
Add /team rank betterteams.rank
add /teama version betterteams.admin.version
add /teama home <team> betterteams.admin.home
Add betterteams.cooldown.bypass
Add betterteams.cost.bypass
Separate unban, sethome and demote permissions
Updates config and messages.yml version



Headings: 
Features: 


Improvements:


Bug Fixes: 
